--- a/main.html
+++ b/main.html
@@ -7,9 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+	<nav>
+	<ul>
+	<li><a href=https://www.google.com/> Home</a></li>
+	<li><a href=https://www.google.com/> Login</a></li>
+	<li><a href=https://www.google.com/>Contact us</a></li>
+	</ul>
+	</nav>
 
 </body>
 
